i hate bozo